--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,18 +5,15 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="theme-color" content="rgb(130 76 119)" media="(prefers-color-scheme: light)" />
+		<meta name="theme-color" content="rgb(244 178 227)" media="(prefers-color-scheme: dark)" />
 		<title>Astro Basics</title>
 	</head>
-	<body>
+	<body class="bg-surface-container font-mono">
 		<slot />
 	</body>
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+	@import "../styles/global.css";
 </style>
