Add history feature and improve UI layout

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@
 		<meta name="theme-color" content="rgb(244 178 227)" media="(prefers-color-scheme: dark)" />
 		<title>Astro Basics</title>
 	</head>
-	<body class="bg-surface-container font-mono">
+	<body class="bg-surface-container font-mono m-0">
 		<slot />
 	</body>
 </html>
